fixed line spacing and margin

--- a/css/style.css
+++ b/css/style.css
@@ -132,10 +132,10 @@ p {
 h1 {
     text-transform: uppercase;
     font-size: 20px;
-    line-height: 0.8125em;
-    /* 13px */
+    line-height: 1.25em;
+    /* 20px */
     text-align: center;
-    margin-bottom: 6px;
+    margin-bottom: 14px;
 }
 
 h2 {
